book/tests/snapshots/snapshot__@transforms__group-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup role (\n  sort join_date  # taken from above\n  take 1\n)\n"
input_file: book/tests/prql/transforms/group-3.prql
---
WITH table_1 AS (
  SELECT
    *,
    ROW_NUMBER() OVER (
      PARTITION BY role
      ORDER BY
        join_date
    ) AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_1 AS table_0
WHERE
  _expr_0 <= 1

