book/tests/snapshots/snapshot__@transforms__join-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\njoin side:left positions [employees.id==positions.employee_id]\n"
input_file: book/tests/prql/transforms/join-0.prql
---
SELECT
  employees.*,
  positions.*
FROM
  employees
  LEFT JOIN positions ON employees.id = positions.employee_id

