book/tests/snapshots/snapshot__@transforms__join-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\njoin side:left p=positions [employees.id==p.employee_id]\n"
input_file: book/tests/prql/transforms/join-1.prql
---
SELECT
  employees.*,
  p.*
FROM
  employees
  LEFT JOIN positions AS p ON employees.id = p.employee_id

