book/tests/snapshots/snapshot__@transforms__join-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\njoin positions [==emp_no]\n"
input_file: book/tests/prql/transforms/join-2.prql
---
SELECT
  employees.*,
  positions.*
FROM
  employees
  JOIN positions ON employees.emp_no = positions.emp_no

