book/tests/snapshots/snapshot__@transforms__select-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect name = f\"{first_name} {last_name}\"\n"
input_file: book/tests/prql/transforms/select-0.prql
---
SELECT
  CONCAT(first_name, ' ', last_name) AS name
FROM
  employees

