book/tests/snapshots/snapshot__@transforms__select-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect [\n  name = f\"{first_name} {last_name}\",\n  age_eoy = dob - @2022-12-31,\n]\n"
input_file: book/tests/prql/transforms/select-1.prql
---
SELECT
  CONCAT(first_name, ' ', last_name) AS name,
  dob - DATE '2022-12-31' AS age_eoy
FROM
  employees

