book/tests/snapshots/snapshot__@transforms__select-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect first_name\n"
input_file: book/tests/prql/transforms/select-2.prql
---
SELECT
  first_name
FROM
  employees

