book/tests/snapshots/snapshot__@transforms__select-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from e=employees\nselect [e.first_name, e.last_name]\n"
input_file: book/tests/prql/transforms/select-3.prql
---
SELECT
  first_name,
  last_name
FROM
  employees AS e

