book/tests/snapshots/snapshot__@transforms__select-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nprql target:sql.bigquery\nfrom tracks\nselect ![milliseconds,bytes]\n"
input_file: book/tests/prql/transforms/select-4.prql
---
SELECT
  *
EXCEPT
  (milliseconds, bytes)
FROM
  tracks

