book/tests/snapshots/snapshot__@transforms__select-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nfrom tracks\nselect [track_id, title, composer, bytes]\nselect ![title, composer]\n"
input_file: book/tests/prql/transforms/select-5.prql
---
SELECT
  track_id,
  bytes
FROM
  tracks

