book/tests/snapshots/snapshot__@transforms__select-6.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nfrom artists\nderive nick = name\nselect ![artists.*]\n"
input_file: book/tests/prql/transforms/select-6.prql
---
SELECT
  name AS nick
FROM
  artists

